--- a/styles/main.css
+++ b/styles/main.css
@@ -41,10 +41,11 @@ h1{
 	font-size: 4em;
 }
 
-h2{
+.titre2 h2{
 	font-family: 'Mansalva', cursive;
-	font-size: 3em;
+	font-size: 4em;
 }
+
 
 /*INDEX IMAGE */
 .hover{
